--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,20 +44,21 @@ font-size:15;
 font-family:"comic sans ms";
 }
 .slider{
-width:100%;
-height:400;
-margin:75 0 0;
-}
-slider img{
-width:100%;
-height:400;
-position:absolute;
-}
+    width:100%;
+    height:400;
+    margin:75 0 0 ;
+    }
+    .slider img{
+        width:100%;
+        height:400;
+        position:absolute;
+        }
+
 .slidtxt{
 width:100%;
 height:400;
 position:relative;
-background:rgba(0,0,0,0.5);
+background:rgba(0,0,0,0.3);
 font-size:15;
 color:black;
 }
