--- a/templates/index.html
+++ b/templates/index.html
@@ -8,11 +8,7 @@
 </head>
 
 <body>
-	{% for message in get_flashed_messages() %}
-	<h1>
-		{{message}}
-	</h1>
-	{% endfor %}
+
 	<div class=nav>
 		<div class=margin>
 			<h1>OTOCOAT</h1>
@@ -26,14 +22,15 @@
 		</div>
 	</div>
 	<div class=slider>
-		<!--<img src="static/cover.jpg">-->
+		<img src=static/cover.jpg>
 		<div class=slidtxt>
 			<div class=margin>
-				<h2>Otocoat</h2>
-					<p>Otocoat is an online tool for calculation of Course Outcome Attainment Score in a way that is easy,
-					quick and efficient.<br>This is available for use exclusively for Rajagiri School of Engineering
-					and Technology faculty.<br></p>
-				<a href="/about"><button>LEARN MORE</button>
+				<h2>Otocoat:</h2><h1> Empowering Rajagiri Faculty with Effortless Course Outcome Assessment!</h1>
+					<p><font color=white>Otocoat is an online tool designed to calculate the Course Outcome Attainment Score in a manner that is easy, quick, and efficient.
+						This tool is exclusively available for use by the faculty of Rajagiri School of Engineering and Technology. With Otocoat, faculty members can conveniently 
+						assess and determine the level of achievement of course outcomes, streamlining the evaluation process and enabling them to gauge the effectiveness of their
+						 teaching methodologies. By providing a user-friendly...</font></p>
+				<a href="/about"><button>Continue Reading</button>
 			</div>
 		</div>
 	</div>
@@ -61,35 +58,36 @@
 		</div>
 		<div class=e>
 			<div style=overflow:hidden;>
-				<img src=02.jpg>
+				<img src=/static/11.jpg>
 			</div>
 			<center>
-				<h4>Otocoat</h4>
-				This is filler text.
+				<h4>Students</h4>
+				The Nations Wealth
 		</div>
 		<div class=e>
 			<div style=overflow:hidden;>
-				<img src=3.jpg>
+				<img src=/static/33.jpeg>
 			</div>
 			<center>
-				<h4>Otocoat</h4>
-				This is filler text.
+				<h4>Infrastructure</h4>
+				The Best In Class
 		</div>
 		<div class=e>
 			<div style=overflow:hidden;>
-				<img src=4.jpg>
+				<img src=/static/34.jpeg>
 			</div>
 			<center>
-				<h4>Otocoat</h4>
-				This is filler text.
+				<h4>Our Lab</h4>
+				The Best In Class
+				
 		</div>
 		<div class=e>
 			<div style=overflow:hidden;>
-				<img src=5.jpg>
+				<img src=/static/43.png>
 			</div>
 			<center>
-				<h4>Otocoat</h4>
-				This is filler text.
+				<h4>Library</h4>
+				The Best In Class
 		</div>
 	</div>
 	<div class=f>
