--- a/templates/feedback1.html
+++ b/templates/feedback1.html
@@ -11,8 +11,7 @@
             <div class=link>
                 <a href="/index" class=nl>Home</a>
                 <a href="/about" class=nl>About</a>
-                <a href="/login" class=nl>Log In</a>
-                <a href="/signup" class=nl>Sign Up</a>
+                <a href = "/dash" class = nl>Dashboard</a>
                 <a href="/contact" class=nl>Contact</a>
                 <a href = "/logout" class = nl>Logout</a>
             </div>
