--- a/templates/class.html
+++ b/templates/class.html
@@ -12,7 +12,7 @@
 				<div class=link>
 					<a href="/index" class=nl>Home</a>
 					<a href="/about" class=nl>About</a>
-					<a href="/login" class=nl>Log In</a>
+					<a href = "/adash" class = nl>Dashboard</a>
 					<a href="/signup" class=nl>Sign Up</a>
 					<a href="/contact" class=nl>Contact</a>
 				</div>
