--- a/templates/dash.html
+++ b/templates/dash.html
@@ -15,7 +15,7 @@
 			<div class=link>
 				<a href="/index" class=nl>Home</a>
 				<a href="/about" class=nl>About</a>
-				<a href="/login" class=nl>Log In</a>
+				<a href = "/contact" class = nl>Contact</a>
 				<a href = "/logout" class = nl>Logout</a>
 			</div>
 		</div>
