--- a/templates/endsemdetails.html
+++ b/templates/endsemdetails.html
@@ -13,6 +13,7 @@
                 <a href="/index" class=nl>Home</a>
                 <a href="/about" class=nl>About</a>
                 <a href="/contact" class=nl>Contact</a>
+                <a href = "/dash" class = nl>Dashboard</a>
                 <a href = "/logout" class = nl>Logout</a>
             </div>
         </div>
