--- a/templates/student.html
+++ b/templates/student.html
@@ -12,6 +12,7 @@
 					<a href="/index" class=nl>Home</a>
 					<a href="/about" class=nl>About</a>
 					<a href="/contact" class=nl>Contact</a>
+					<a href = "/adash" class = nl>Dashboard</a>
 					<a href = "/logout" class = nl>Logout</a>
 				</div>
 			</div>
